terraform/deployment-ms-validate-user.yaml
# Copyright (c) 2021 Linux Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-validate-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-validate-user
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: ms-validate-user
        tier: backend
        track: stable
    spec:
      containers:
        - name: ms-validate-user
          image: quay.io/ortelius/ms-validate-user:deploy-v10.0.0.68-g6b08a2a
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: jwt-volume
              mountPath: /app/keys
      volumes:
        - name: jwt-volume
          secret:
            secretName: jwtkeys
