terraform/keptn-patch-image.yaml
apiVersion: apps/v1
kind: Deployment
spec:
  template:
    spec:
      containers:
      - name: keptn-ortelius-service
        image: ghcr.io/ortelius/keptn-ortelius-service:0.0.2-dev
