terraform/patch-ms-validate-user-jwt.yaml
apiVersion: apps/v1
kind: Deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      track: stable
  template:
    containers:
      - name:
        image:
        imagePullPolicy:
        ports:
        volumeMounts:
          - name: jwt-volume
            mountPath: /app/keys
        volumes:
          - name: jwt-volume
            secret:
              secretName: jwtkeys
