terraform/microservices-demo-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boutique-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: boutique.lair.pangarabbit.com
      http:
        paths:
          - pathType: Prefix
            path: "/frontend"
            backend:
              service:
                name: frontend
                port:
                  number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: default
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: server
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            privileged: false
            readOnlyRootFilesystem: true
          image: gcr.io/google-samples/microservices-demo/frontend:v0.4.1
          ports:
            - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
                - name: "Cookie"
                  value: "shop_session-id=x-readiness-probe"
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
                - name: "Cookie"
                  value: "shop_session-id=x-liveness-probe"
#          env:
#            - name: PORT
#              value: "8080"
#            - name: PRODUCT_CATALOG_SERVICE_ADDR
#              value: "productcatalogservice:3550"
#            - name: CURRENCY_SERVICE_ADDR
#              value: "currencyservice:7000"
#            - name: CART_SERVICE_ADDR
#              value: "cartservice:7070"
#            - name: RECOMMENDATION_SERVICE_ADDR
#              value: "recommendationservice:8080"
#            - name: SHIPPING_SERVICE_ADDR
#              value: "shippingservice:50051"
#            - name: CHECKOUT_SERVICE_ADDR
#              value: "checkoutservice:5050"
#            - name: AD_SERVICE_ADDR
#              value: "adservice:9555"
#            # # ENV_PLATFORM: One of: local, gcp, aws, azure, onprem, alibaba
#            # # When not set, defaults to "local" unless running in GKE, otherwies auto-sets to gcp
#            # - name: ENV_PLATFORM
#            #   value: "aws"
#            - name: DISABLE_TRACING
#              value: "1"
#            - name: DISABLE_PROFILER
#              value: "1"
          # - name: CYMBAL_BRANDING
          #   value: "true"
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
